# video_enhancer

./: CMakeLists.txt
doc/: downscale  notes.md
include/video_enhancer/: config.hpp  gpu_holder.hpp  gpu_unit.hpp  resource_holder.hpp
resources/: output.flac
src/: main.cpp
src/video_enhancer/: gpu_holder.cpp  gpu_unit.cpp  resource_holder.cpp
