cmake_minimum_required(VERSION 3.30)
project(video_enhancer VERSION 0.0.1)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(GLOB SOURCES src/${PROJECT_NAME}/*.cpp)
include_directories(include/${PROJECT_NAME})

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic")

set(PROJECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_EXES_DIR ${PROJECT_ROOT_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_EXES_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_EXES_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_EXES_DIR})

add_executable(${PROJECT_NAME} ${SOURCES} src/main.cpp)
